[package]
name = "transaction-csv-to-sankeymatic"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-print = "0.3.4"
csv = "1.1.6"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.26"
